finish: core functionalities